<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Call Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_num">Phone Number:</string>
    <string name="operator">Select Operator:</string>
    <string name="send">Send</string>
    <string name="complete">Call me sent</string>
    <string name="error">Sending Failed</string>
    
    <string-array name="operatorChociesIre">
        <item>3</item>
        <item>Meteor</item>
        <item >O2</item>
        <item >vodafone IE</item>
    </string-array>

    <string-array name="operatorNumbersIre">
        <item>50100</item>
        <item>50001</item>
        <item>*103*</item>
        <item>50234</item>        
    </string-array>
</resources>
