<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="false"
    tools:context="ej22.callmeapp.MainActivity$PlaceholderFragment"
    android:focusable="false">

    <TextView
        android:id="@+id/phoneNumLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num" />

    <EditText
        android:id="@+id/phoneNumEditTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumLbl"
        android:layout_below="@+id/phoneNumLbl"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/opLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumEditTxt"
        android:layout_below="@+id/phoneNumEditTxt"
        android:layout_marginTop="38dp"
        android:text="@string/operator" />

    <Spinner
        android:id="@+id/operatorSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/opLbl"
        android:layout_below="@+id/opLbl" />

    <TextView
        android:id="@+id/testOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/operatorSpinner"
        android:layout_toRightOf="@+id/btnWithText"
        android:layout_marginTop="95dp"
        android:layout_alignParentEnd="false" />

    <com.dd.CircularProgressButton
        xmlns:app="http://schemas.android.com/apk/res/ej22.callmeapp"
        android:id="@+id/btnWithText"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/complete"
        app:cpb_textError="@string/error"
        app:cpb_textIdle="@string/send"
        app:cpb_cornerRadius="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>